--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,1 +1,13 @@
-<h1>footer</h1>
+<!-- Footer -->
+<footer class="bg-dark footer">
+
+  <!-- Footer Elements -->
+  <div class="container">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2019 Copyright:
+      <a href="https://itshareacademy.com/"> IT-Share Academy</a>
+    </div>
+    <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
