--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,8 @@
 <body>
   <% include ./partial/header%>
   <main role="main" class="container">
-    <div class="starter-template">
-      <h1>Bootstrap starter template</h1>
-      <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a
-        mostly barebones HTML document.</p>
-    </div>
-  <button class="btn btn-primary">click</button>  
+<a href="/api/customer" class="btn btn-primary">Show customers</a>
+<a href="/api/customer/addCustomer" class="btn btn-primary">Add customer</a>
   </main>
 <% include ./partial/footer%>
 </body>
